# AlgoRythm

./: .gitignore  README.md  setup.cfg
src/algorythm/: __main__.py  backend.py  bars.py  collect_media_info.py  color_schemes.py  graphics.py  menu.py  pickle_test.py  print_currently_playing.cs  pygame_objects.py  pygame_textinput.py  settings.py  spotipy_implementation.py  test_module.py
