[metadata]
name = algorythm
version = 1.0.1
author = Snake Charmers
author_email = laurence.mullen@ufl.edu
description = A python audio visualizer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cburrows1/AlgoRythm
project_urls = 
	Bug Tracker = https://github.com/cburrows1/AlgoRythm/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.8
install_requires =
	pyaudio
	numpy
	scipy
	pygame
	pywin32
	winrt
	requests
	pillow
	spotipy

[options.packages.find]
where = src
